--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Reset CSS */
+
 body, h1, h2, p, ul, li, a {
     margin: 0px;
     padding: 0;
@@ -25,6 +27,8 @@ img {
     box-sizing: border-box;
 }
 
+/* Superinfo CSS */
+
 .superinfo-bg {
     background: #122ab2;
     color: white;
@@ -45,4 +49,45 @@ img {
 
 .superinfo a {
     color: white;
+}
+
+/*Menu*/
+
+.menu-bg {
+    background: #2c70ff;
+}
+
+.menu{
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 15px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menu a {
+    color: white;
+}
+
+.menu-logo a {
+    font-size: 2.25em;
+    font-weight: bold;
+    margin: 0 10px;
+}
+
+.menu-nav ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.menu-nav a {
+    font-size: 1.25em;
+    display: block;
+    padding: 10px;
+}
+
+.menu-nav a:hover {
+    color: #122ab2;
 }
